readme file updated

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <h1>for your home</h1>
                         </div>
 
-                        <div class="midPara">
+                        <div class="midPara lorem">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
                             <p>sit ame dolor sit amet consectetur dolor acta</p>
                             <p>lor sum dolor sit amet con secte tur adi pisi cing.</p>
@@ -80,7 +80,7 @@
             <div class="footer">
                 <div class="footerLeft">
                     <div class="footerLeftOne">
-                        <div class="footerContent">
+                        <div class="footerContent lorem">
                             <h2>Discount 10%</h2>
                             <p>Lorem ipsum dolor sit wur djkd jkdl</p>
                             <p>consectetur adipisicing elit exped</p>
