html file updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
     <div class="container">
 
         <div class="leftGreenContainer">
@@ -24,10 +24,10 @@
             <div class="navBar">
                 
                 <div class="navBarLeft">
-                    <a href="">Home</a>
-                    <a href="" class="anchorPadding">About us</a>
-                    <a href="" class="anchorPadding">Events</a>
-                    <a href="" class="anchorPadding">Specialists</a>
+                    <a>Home</a>
+                    <a class="anchorPadding">About us</a>
+                    <a class="anchorPadding">Events</a>
+                    <a  class="anchorPadding">Specialists</a>
                 </div>
 
                 <div class="navBarMid">    </div>
